Database version support (liquibase integration)